// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - withdraw claim exited assets for single user in multiple checkpoints in multiple transactions 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 72436,
}
`;

exports[`EthVault - withdraw claim exited assets for single user in multiple checkpoints in multiple transactions 2`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 52263,
}
`;

exports[`EthVault - withdraw claim exited assets for single user in multiple checkpoints in single transaction 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 52630,
}
`;

exports[`EthVault - withdraw claim exited assets for single user in single checkpoint 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 49985,
}
`;

exports[`EthVault - withdraw enter exit queue locks tokens for the time of exit 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 79367,
}
`;

exports[`EthVault - withdraw enter exit queue reduces allowance for sender other than owner 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 80043,
}
`;

exports[`EthVault - withdraw get checkpoint index works with many checkpoints 1`] = `31772`;

exports[`EthVault - withdraw redeem reduces allowance for sender other than owner 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 64804,
}
`;

exports[`EthVault - withdraw redeem transfers assets to receiver 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 64128,
}
`;

exports[`EthVault - withdraw update exit queue adds checkpoint 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 100843,
}
`;

exports[`EthVault - withdraw update exit queue for not all the queued shares 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 105633,
}
`;
